<resources>
    <string name="app_name">F4B</string>
    <string name="title_activity_home">F4B</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SIDHARTHA SEKHAR</string>
    <string name="nav_header_subtitle">yaaricreation@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_store">Gift Store</string>
    <string name="menu_offer">Offer Zone</string>

    <string name="menu_men">Categories </string>
    <string name="menu_customtshirt">Custom tshirt </string>

    <string name="menu_women">Women </string>
    <string name="menu_share">Refer and Earn</string>
    <string name="menu_help">About Us</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_account">My Account</string>
    <string name="menu_order">My Order</string>
    <string name="menu_cart">My Cart</string>
    <string name="menu_wishlist">My Wishlist</string>
    <string name="menu_terms">Terms and Conditions</string>
    <string name="menu_electronics">Electronics</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>

    <string name="menu_send">Send</string>
    <string name="action_usn">Enter Your USN</string>
    <string name="action_name">Enter Your Name</string>
    <string name="action_passward">Your Password</string>
    <string name="action_repassword">Confirm Password</string>
    <string name="action_mobile">Enter Mobile No.</string>
    <string name="action_stream">Stream CTMA/CTIS/IOT/DS</string>
</resources>
