<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".SignUpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="50dp"
        android:gravity="center">
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="20dp"
            android:src="@drawable/ic_launcher_background"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"

            android:textColor="@color/colorPrimary"

             android:textStyle="bold"
            android:text="Welcome to F4B "/>

        <EditText
            android:id="@+id/ed1"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:layout_margin="20dp"
            android:paddingStart="5dp"
            android:background="@drawable/strokebaground"
            android:backgroundTint="#fff"
            android:drawableLeft="@drawable/ic_person_black"
            android:drawablePadding="5dp"
            android:hint="Enter E-Mail"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/ed2"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:inputType="textPassword"
            android:backgroundTint="#fff"
            android:paddingStart="5dp"

            android:background="@drawable/strokebaground"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="5dp"
            android:hint="@string/action_passward"/>

        <EditText
            android:id="@+id/ed3"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:background="@drawable/strokebaground"
            android:layout_margin="20dp"
            android:inputType="textPassword"
            android:backgroundTint="#fff"
            android:paddingStart="5dp"

            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="5dp"
            android:hint="@string/action_repassword"/>


        <EditText
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:id="@+id/ed4"
            android:inputType="text"
            android:paddingStart="5dp"

            android:backgroundTint="#fff"
            android:background="@drawable/strokebaground"
            android:drawableLeft="@drawable/ic_person_black"
            android:drawablePadding="5dp"
            android:hint="@string/action_name"/>

        <EditText
            android:id="@+id/ed5"
            android:layout_width="300dp"
            android:inputType="number"
            android:layout_height="35dp"
            android:paddingStart="5dp"

            android:backgroundTint="#fff"
            android:layout_marginBottom="20dp"
            android:background="@drawable/strokebaground"
            android:drawableLeft="@drawable/ic_phone_android"
            android:drawablePadding="5dp"
            android:layout_marginTop="20dp"
            android:hint="@string/action_mobile"/>



        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressbar"
            android:visibility="gone"

            />


        <Button
            android:id="@+id/signup"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="SignUp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:textColor="@color/startblue"
            android:id="@+id/login"
            android:text="Have an account? Login Here"/>


    </LinearLayout>


</ScrollView>